@@ -17,29 +17,12 @@ public class ArangoDbEndpointUriFactory extends org.apache.camel.support.compone
 
     private static final String BASE = ":database";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(11);
-        props.add("database");
-        props.add("documentCollection");
-        props.add("edgeCollection");
-        props.add("graph");
-        props.add("host");
-        props.add("lazyStartProducer");
-        props.add("operation");
-        props.add("password");
-        props.add("port");
-        props.add("user");
-        props.add("vertexCollection");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("password");
-        secretProps.add("user");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "database", "documentCollection", "edgeCollection", "graph", "host", "lazyStartProducer", "operation",
+            "password", "port", "user", "vertexCollection");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "password", "user");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
