@@ -17,39 +17,14 @@ public class Ddb2EndpointUriFactory extends org.apache.camel.support.component.E
 
     private static final String BASE = ":tableName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(21);
-        props.add("accessKey");
-        props.add("amazonDDBClient");
-        props.add("consistentRead");
-        props.add("enabledInitialDescribeTable");
-        props.add("keyAttributeName");
-        props.add("keyAttributeType");
-        props.add("keyScalarType");
-        props.add("lazyStartProducer");
-        props.add("operation");
-        props.add("overrideEndpoint");
-        props.add("proxyHost");
-        props.add("proxyPort");
-        props.add("proxyProtocol");
-        props.add("readCapacity");
-        props.add("region");
-        props.add("secretKey");
-        props.add("tableName");
-        props.add("trustAllCertificates");
-        props.add("uriEndpointOverride");
-        props.add("useDefaultCredentialsProvider");
-        props.add("writeCapacity");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("accessKey");
-        secretProps.add("secretKey");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "accessKey", "amazonDDBClient", "consistentRead", "enabledInitialDescribeTable", "keyAttributeName",
+            "keyAttributeType", "keyScalarType", "lazyStartProducer", "operation", "overrideEndpoint", "proxyHost",
+            "proxyPort", "proxyProtocol", "readCapacity", "region", "secretKey", "tableName", "trustAllCertificates",
+            "uriEndpointOverride", "useDefaultCredentialsProvider", "writeCapacity");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "accessKey", "secretKey");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
