@@ -17,90 +17,23 @@ public class AWS2S3EndpointUriFactory extends org.apache.camel.support.component
 
     private static final String BASE = "://bucketNameOrArn";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(70);
-        props.add("accessKey");
-        props.add("amazonS3Client");
-        props.add("amazonS3Presigner");
-        props.add("autoCreateBucket");
-        props.add("autocloseBody");
-        props.add("awsKMSKeyId");
-        props.add("backoffErrorThreshold");
-        props.add("backoffIdleThreshold");
-        props.add("backoffMultiplier");
-        props.add("batchMessageNumber");
-        props.add("batchSize");
-        props.add("bridgeErrorHandler");
-        props.add("bucketNameOrArn");
-        props.add("customerAlgorithm");
-        props.add("customerKeyId");
-        props.add("customerKeyMD5");
-        props.add("delay");
-        props.add("deleteAfterRead");
-        props.add("deleteAfterWrite");
-        props.add("delimiter");
-        props.add("destinationBucket");
-        props.add("destinationBucketPrefix");
-        props.add("destinationBucketSuffix");
-        props.add("doneFileName");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("fileName");
-        props.add("greedy");
-        props.add("ignoreBody");
-        props.add("includeBody");
-        props.add("includeFolders");
-        props.add("initialDelay");
-        props.add("keyName");
-        props.add("lazyStartProducer");
-        props.add("maxConnections");
-        props.add("maxMessagesPerPoll");
-        props.add("moveAfterRead");
-        props.add("multiPartUpload");
-        props.add("namingStrategy");
-        props.add("operation");
-        props.add("overrideEndpoint");
-        props.add("partSize");
-        props.add("pojoRequest");
-        props.add("policy");
-        props.add("pollStrategy");
-        props.add("prefix");
-        props.add("proxyHost");
-        props.add("proxyPort");
-        props.add("proxyProtocol");
-        props.add("region");
-        props.add("repeatCount");
-        props.add("restartingPolicy");
-        props.add("runLoggingLevel");
-        props.add("scheduledExecutorService");
-        props.add("scheduler");
-        props.add("schedulerProperties");
-        props.add("secretKey");
-        props.add("sendEmptyMessageWhenIdle");
-        props.add("startScheduler");
-        props.add("storageClass");
-        props.add("streamingUploadMode");
-        props.add("streamingUploadTimeout");
-        props.add("timeUnit");
-        props.add("trustAllCertificates");
-        props.add("uriEndpointOverride");
-        props.add("useAwsKMS");
-        props.add("useCustomerKey");
-        props.add("useDefaultCredentialsProvider");
-        props.add("useFixedDelay");
-        props.add("useSSES3");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("accessKey");
-        secretProps.add("secretKey");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("scheduler.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "accessKey", "amazonS3Client", "amazonS3Presigner", "autoCreateBucket", "autocloseBody", "awsKMSKeyId",
+            "backoffErrorThreshold", "backoffIdleThreshold", "backoffMultiplier", "batchMessageNumber", "batchSize",
+            "bridgeErrorHandler", "bucketNameOrArn", "customerAlgorithm", "customerKeyId", "customerKeyMD5", "delay",
+            "deleteAfterRead", "deleteAfterWrite", "delimiter", "destinationBucket", "destinationBucketPrefix",
+            "destinationBucketSuffix", "doneFileName", "exceptionHandler", "exchangePattern", "fileName", "greedy",
+            "ignoreBody", "includeBody", "includeFolders", "initialDelay", "keyName", "lazyStartProducer",
+            "maxConnections", "maxMessagesPerPoll", "moveAfterRead", "multiPartUpload", "namingStrategy", "operation",
+            "overrideEndpoint", "partSize", "pojoRequest", "policy", "pollStrategy", "prefix", "proxyHost", "proxyPort",
+            "proxyProtocol", "region", "repeatCount", "restartingPolicy", "runLoggingLevel", "scheduledExecutorService",
+            "scheduler", "schedulerProperties", "secretKey", "sendEmptyMessageWhenIdle", "startScheduler", "storageClass",
+            "streamingUploadMode", "streamingUploadTimeout", "timeUnit", "trustAllCertificates", "uriEndpointOverride",
+            "useAwsKMS", "useCustomerKey", "useDefaultCredentialsProvider", "useFixedDelay", "useSSES3");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "accessKey", "secretKey");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "scheduler.");
 
     @Override
     public boolean isEnabled(String scheme) {
