@@ -17,32 +17,12 @@ public class DataSetTestEndpointUriFactory extends org.apache.camel.support.comp
 
     private static final String BASE = ":name";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(17);
-        props.add("anyOrder");
-        props.add("assertPeriod");
-        props.add("copyOnExchange");
-        props.add("delimiter");
-        props.add("expectedCount");
-        props.add("failFast");
-        props.add("lazyStartProducer");
-        props.add("log");
-        props.add("name");
-        props.add("reportGroup");
-        props.add("resultMinimumWaitTime");
-        props.add("resultWaitTime");
-        props.add("retainFirst");
-        props.add("retainLast");
-        props.add("sleepForEmptyTest");
-        props.add("split");
-        props.add("timeout");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "anyOrder", "assertPeriod", "copyOnExchange", "delimiter", "expectedCount", "failFast", "lazyStartProducer",
+            "log", "name", "reportGroup", "resultMinimumWaitTime", "resultWaitTime", "retainFirst", "retainLast",
+            "sleepForEmptyTest", "split", "timeout");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
