@@ -17,25 +17,11 @@ public class DirectVmEndpointUriFactory extends org.apache.camel.support.compone
 
     private static final String BASE = ":name";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(10);
-        props.add("block");
-        props.add("bridgeErrorHandler");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("failIfNoConsumers");
-        props.add("headerFilterStrategy");
-        props.add("lazyStartProducer");
-        props.add("name");
-        props.add("propagateProperties");
-        props.add("timeout");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "block", "bridgeErrorHandler", "exceptionHandler", "exchangePattern", "failIfNoConsumers",
+            "headerFilterStrategy", "lazyStartProducer", "name", "propagateProperties", "timeout");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
