@@ -17,32 +17,12 @@ public class GooglePubsubEndpointUriFactory extends org.apache.camel.support.com
 
     private static final String BASE = ":projectId:destinationName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(17);
-        props.add("ackMode");
-        props.add("authenticate");
-        props.add("bridgeErrorHandler");
-        props.add("concurrentConsumers");
-        props.add("destinationName");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("lazyStartProducer");
-        props.add("loggerId");
-        props.add("maxAckExtensionPeriod");
-        props.add("maxMessagesPerPoll");
-        props.add("messageOrderingEnabled");
-        props.add("projectId");
-        props.add("pubsubEndpoint");
-        props.add("serializer");
-        props.add("serviceAccountKey");
-        props.add("synchronousPull");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "ackMode", "authenticate", "bridgeErrorHandler", "concurrentConsumers", "destinationName", "exceptionHandler",
+            "exchangePattern", "lazyStartProducer", "loggerId", "maxAckExtensionPeriod", "maxMessagesPerPoll",
+            "messageOrderingEnabled", "projectId", "pubsubEndpoint", "serializer", "serviceAccountKey", "synchronousPull");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
