@@ -17,20 +17,10 @@ public class HazelcastRingbufferEndpointUriFactory extends org.apache.camel.supp
 
     private static final String BASE = ":cacheName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(5);
-        props.add("cacheName");
-        props.add("defaultOperation");
-        props.add("hazelcastInstance");
-        props.add("hazelcastInstanceName");
-        props.add("lazyStartProducer");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "cacheName", "defaultOperation", "hazelcastInstance", "hazelcastInstanceName", "lazyStartProducer");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
