@@ -17,25 +17,11 @@ public class KameletEndpointUriFactory extends org.apache.camel.support.componen
 
     private static final String BASE = ":templateId/routeId";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(10);
-        props.add("block");
-        props.add("bridgeErrorHandler");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("failIfNoConsumers");
-        props.add("lazyStartProducer");
-        props.add("location");
-        props.add("routeId");
-        props.add("templateId");
-        props.add("timeout");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "block", "bridgeErrorHandler", "exceptionHandler", "exchangePattern", "failIfNoConsumers", "lazyStartProducer",
+            "location", "routeId", "templateId", "timeout");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
