@@ -17,84 +17,22 @@ public class MinioEndpointUriFactory extends org.apache.camel.support.component.
 
     private static final String BASE = ":bucketName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(64);
-        props.add("accessKey");
-        props.add("autoCloseBody");
-        props.add("autoCreateBucket");
-        props.add("backoffErrorThreshold");
-        props.add("backoffIdleThreshold");
-        props.add("backoffMultiplier");
-        props.add("bridgeErrorHandler");
-        props.add("bucketName");
-        props.add("bypassGovernanceMode");
-        props.add("customHttpClient");
-        props.add("delay");
-        props.add("deleteAfterRead");
-        props.add("deleteAfterWrite");
-        props.add("delimiter");
-        props.add("destinationBucketName");
-        props.add("destinationObjectName");
-        props.add("endpoint");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("greedy");
-        props.add("includeBody");
-        props.add("includeFolders");
-        props.add("includeUserMetadata");
-        props.add("includeVersions");
-        props.add("initialDelay");
-        props.add("keyName");
-        props.add("lazyStartProducer");
-        props.add("length");
-        props.add("matchETag");
-        props.add("maxConnections");
-        props.add("maxMessagesPerPoll");
-        props.add("minioClient");
-        props.add("modifiedSince");
-        props.add("moveAfterRead");
-        props.add("notMatchETag");
-        props.add("objectLock");
-        props.add("objectName");
-        props.add("offset");
-        props.add("operation");
-        props.add("pojoRequest");
-        props.add("policy");
-        props.add("pollStrategy");
-        props.add("prefix");
-        props.add("proxyPort");
-        props.add("recursive");
-        props.add("region");
-        props.add("repeatCount");
-        props.add("runLoggingLevel");
-        props.add("scheduledExecutorService");
-        props.add("scheduler");
-        props.add("schedulerProperties");
-        props.add("secretKey");
-        props.add("secure");
-        props.add("sendEmptyMessageWhenIdle");
-        props.add("serverSideEncryption");
-        props.add("serverSideEncryptionCustomerKey");
-        props.add("startAfter");
-        props.add("startScheduler");
-        props.add("storageClass");
-        props.add("timeUnit");
-        props.add("unModifiedSince");
-        props.add("useFixedDelay");
-        props.add("useVersion1");
-        props.add("versionId");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("accessKey");
-        secretProps.add("secretKey");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("scheduler.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "accessKey", "autoCloseBody", "autoCreateBucket", "backoffErrorThreshold", "backoffIdleThreshold",
+            "backoffMultiplier", "bridgeErrorHandler", "bucketName", "bypassGovernanceMode", "customHttpClient", "delay",
+            "deleteAfterRead", "deleteAfterWrite", "delimiter", "destinationBucketName", "destinationObjectName",
+            "endpoint", "exceptionHandler", "exchangePattern", "greedy", "includeBody", "includeFolders",
+            "includeUserMetadata", "includeVersions", "initialDelay", "keyName", "lazyStartProducer", "length",
+            "matchETag", "maxConnections", "maxMessagesPerPoll", "minioClient", "modifiedSince", "moveAfterRead",
+            "notMatchETag", "objectLock", "objectName", "offset", "operation", "pojoRequest", "policy", "pollStrategy",
+            "prefix", "proxyPort", "recursive", "region", "repeatCount", "runLoggingLevel", "scheduledExecutorService",
+            "scheduler", "schedulerProperties", "secretKey", "secure", "sendEmptyMessageWhenIdle", "serverSideEncryption",
+            "serverSideEncryptionCustomerKey", "startAfter", "startScheduler", "storageClass", "timeUnit",
+            "unModifiedSince", "useFixedDelay", "useVersion1", "versionId");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "accessKey", "secretKey");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "scheduler.");
 
     @Override
     public boolean isEnabled(String scheme) {
