@@ -17,21 +17,10 @@ public class MyBatisBeanEndpointUriFactory extends org.apache.camel.support.comp
 
     private static final String BASE = ":beanName:methodName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(6);
-        props.add("beanName");
-        props.add("executorType");
-        props.add("inputHeader");
-        props.add("lazyStartProducer");
-        props.add("methodName");
-        props.add("outputHeader");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "beanName", "executorType", "inputHeader", "lazyStartProducer", "methodName", "outputHeader");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
