@@ -17,28 +17,12 @@ public class NovaEndpointUriFactory extends org.apache.camel.support.component.E
 
     private static final String BASE = ":host";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(10);
-        props.add("apiVersion");
-        props.add("config");
-        props.add("domain");
-        props.add("host");
-        props.add("lazyStartProducer");
-        props.add("operation");
-        props.add("password");
-        props.add("project");
-        props.add("subsystem");
-        props.add("username");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("password");
-        secretProps.add("username");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "apiVersion", "config", "domain", "host", "lazyStartProducer", "operation", "password", "project", "subsystem",
+            "username");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "password", "username");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
