@@ -17,25 +17,11 @@ public class PdfEndpointUriFactory extends org.apache.camel.support.component.En
 
     private static final String BASE = ":operation";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(10);
-        props.add("font");
-        props.add("fontSize");
-        props.add("lazyStartProducer");
-        props.add("marginBottom");
-        props.add("marginLeft");
-        props.add("marginRight");
-        props.add("marginTop");
-        props.add("operation");
-        props.add("pageSize");
-        props.add("textProcessingFactory");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "font", "fontSize", "lazyStartProducer", "marginBottom", "marginLeft", "marginRight", "marginTop", "operation",
+            "pageSize", "textProcessingFactory");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
