@@ -17,24 +17,11 @@ public class WebhookEndpointUriFactory extends org.apache.camel.support.componen
 
     private static final String BASE = ":endpointUri";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(9);
-        props.add("bridgeErrorHandler");
-        props.add("endpointUri");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("webhookAutoRegister");
-        props.add("webhookBasePath");
-        props.add("webhookComponentName");
-        props.add("webhookExternalUrl");
-        props.add("webhookPath");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "bridgeErrorHandler", "endpointUri", "exceptionHandler", "exchangePattern", "webhookAutoRegister",
+            "webhookBasePath", "webhookComponentName", "webhookExternalUrl", "webhookPath");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
