@@ -17,26 +17,11 @@ public class WekaEndpointUriFactory extends org.apache.camel.support.component.E
 
     private static final String BASE = ":command";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(11);
-        props.add("apply");
-        props.add("build");
-        props.add("command");
-        props.add("dsname");
-        props.add("folds");
-        props.add("lazyStartProducer");
-        props.add("loadFrom");
-        props.add("path");
-        props.add("saveTo");
-        props.add("seed");
-        props.add("xval");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "apply", "build", "command", "dsname", "folds", "lazyStartProducer", "loadFrom", "path", "saveTo", "seed",
+            "xval");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
