@@ -17,33 +17,13 @@ public class XsltSaxonEndpointUriFactory extends org.apache.camel.support.compon
 
     private static final String BASE = ":resourceUri";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(18);
-        props.add("allowStAX");
-        props.add("contentCache");
-        props.add("deleteOutputFile");
-        props.add("entityResolver");
-        props.add("errorListener");
-        props.add("failOnNullBody");
-        props.add("lazyStartProducer");
-        props.add("output");
-        props.add("resourceUri");
-        props.add("resultHandlerFactory");
-        props.add("saxonConfiguration");
-        props.add("saxonExtensionFunctions");
-        props.add("secureProcessing");
-        props.add("transformerCacheSize");
-        props.add("transformerFactory");
-        props.add("transformerFactoryClass");
-        props.add("transformerFactoryConfigurationStrategy");
-        props.add("uriResolver");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "allowStAX", "contentCache", "deleteOutputFile", "entityResolver", "errorListener", "failOnNullBody",
+            "lazyStartProducer", "output", "resourceUri", "resultHandlerFactory", "saxonConfiguration",
+            "saxonExtensionFunctions", "secureProcessing", "transformerCacheSize", "transformerFactory",
+            "transformerFactoryClass", "transformerFactoryConfigurationStrategy", "uriResolver");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
